--- a/dummy.html
+++ b/dummy.html
@@ -16,9 +16,9 @@
             --primary-color: #494747;
             --secondary-color: #040404;
             --font-primary: sans-serif;
-            --font-large: 3rem;
-            --font-medium: 1.5rem;
-            --font-small: 0.75rem;
+            --font-large: 2.5rem;
+            --font-medium: 1.25rem;
+            --font-small: 0.85rem;
             --font-bold: 700;
             --font-light: lighter;
         }
@@ -62,9 +62,9 @@
         body::before {
             content: "";
             position: absolute;
-            top: 0;
+            top: 26px;
             left: 0;
-            height: 13rem;
+            height: 10rem;
             width: 100vw;
             z-index: -1;
             opacity: 0.5;
@@ -82,15 +82,14 @@
             align-items: center;
             background-color: var(--primary-color);
             color: white;
-            width: 15rem;
+            width: 13rem;
             padding: 1rem;
-            margin: 0 0 0 50px;
+            margin: 0 0 0 40px;
             gap: 10px;
-            text-align: center;
         }
 
         .div2 {
-            padding: 0 3rem;
+            padding: 0 2rem;
             display: flex;
             flex-direction: column;
             width: 70vw;
@@ -98,7 +97,7 @@
         }
 
         .name {
-            padding: 7rem 0 5rem;
+            padding: 5rem 0;
             font-family: sans-serif;
         }
 
@@ -112,14 +111,13 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
             background-color: #f5f5f5;
         }
 
         .skill-list {
             display: flex;
             flex-direction: column;
-            gap: 1rem;
+            gap: 0.3rem;
             flex-wrap: wrap;
         }
 
@@ -133,7 +131,6 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
             height: 250px;
         }
 
@@ -152,7 +149,6 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
             height: 250px;
         }
 
@@ -170,7 +166,7 @@
             display: flex;
             flex-direction: column;
             gap: 1rem;
-            padding: 1rem;
+            padding: 45px 1rem 1rem;
             height: 250px;
         }
 
@@ -219,56 +215,89 @@
                     alt="Profile Photo">
             </div>
             <div class="contacts">
-                <h2>Contact</h2>
+                <p class="font-medium font-bold">Contact</p>
                 <div class="contact-list">
-                    <div class="contact-item">{{email}}</div>
-                    <div class="contact-item">{{phone}}</div>
-                    <div class="contact-item">{{address}}</div>
+                    <div class="contact-item">
+                        <p class="font-small">anjanirathore16@gmail.com</p>
+                    </div>
+                    <div class="contact-item">
+                        <p class="font-small">09717599515</p>
+                    </div>
+                    <div class="contact-item">
+                        <p class="font-small">B -475 b Patel Nagar 2nd</p>
+                    </div>
                 </div>
             </div>
             <div class="qualifications">
-                <h2>Achievements</h2>
+                <p class="font-medium font-bold">Achievements</p>
                 <div class="qualification-list">
-                    {{#each achievements}}
-                    <div class="qualification-item">{{this}}</div>
-                    {{/each}}
+                    <div class="qualification-item">
+                        <p class="font-small">5 star HacckerRanker in problem solving</p>
+                    </div>
+                    <div class="qualification-item">
+                        <p class="font-small">Competed at more than 5 hackathons</p>
+                    </div>
+                    <div class="qualification-item">
+                        <p class="font-small">Solved 200 leetcode problems</p>
+                    </div>
                 </div>
             </div>
             <div class="education">
-                <h2>Education</h2>
+                <p class="font-medium font-bold">Education</p>
                 <div class="education-list">
-                    {{#each edu}}
-                    <div class="education-item">{{this}}</div>
-                    {{/each}}
+                    <div class="education-item">
+                        <p class="font-small">Ch chhabil daas</p>
+                    </div>
+                    <div class="education-item">
+                        <p class="font-small">Keshav mahavidyalaya</p>
+                    </div>
+                    <div class="education-item">
+                        <p class="font-small">Delhi Universoty</p>
+                    </div>
                 </div>
             </div>
         </div>
         <div class="div2">
             <div class="font-large name">
-                <p>{{name}}</p>
+                <p>Aman Singh</p>
             </div>
             <div class="about">
                 <p class="font-medium font-bold">About me</p>
-                <p>{{about}}</p>
+                <p>I am a passionate software developer with experience in various programming languages and frameworks.
+                    I enjoy problem-solving and always strive to write clean, efficient code. In my spare time, I like
+                    to keep up with the latest technology trends and work on personal projects to improve my skills.</p>
             </div>
             <div class="line-div"></div>
             <div class="skills">
                 <h2>Skills</h2>
                 <div class="skill-list">
-                    {{#each skill}}
-                    <div class="skill-item">{{this}}</div>
-                    {{/each}}
+                    <div class="skill-item">
+                        <span>react js</span>
+                        <span>Intermediate</span>
+                    </div>
+                    <div class="skill-item">redux js</div>
+                    <div class="skill-item">blockchain</div>
                 </div>
                 <div class="work-history">
                     <h2>Work History</h2>
-                    {{#each work}}
                     <div class="work-item">
-                        <!-- <h3>{{this.position}}</h3>
-                        <p>{{this.company}}</p>
-                        <p>{{this.years}}</p> -->
-                        <p>{{this}}</p>
+                        <!-- <h3></h3>
+                        <p></p>
+                        <p></p> -->
+                        <p>Worked as CEO at Google</p>
                     </div>
-                    {{/each}}
+                    <div class="work-item">
+                        <!-- <h3></h3>
+                        <p></p>
+                        <p></p> -->
+                        <p>Owner of Microsoft </p>
+                    </div>
+                    <div class="work-item">
+                        <!-- <h3></h3>
+                        <p></p>
+                        <p></p> -->
+                        <p></p>
+                    </div>
 
                 </div>
             </div>
